<resources>
    <string name="app_name">ATMirror</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_discovering">Start discovering</string>
    <string name="stop_discovering">Stop discovering</string>
    <string name="switch_name_format">Switch %s</string>
    <string name="turn_on">Turn ON</string>
    <string name="turn_off">Turn OFF</string>
    <string name="toggle">TOGGLE</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="name_save">Name saved</string>
    <string name="add_light">Add light</string>
    <string name="add_switch">Add switch</string>
    <string name="waiting_mirror">Waiting response from mirror</string>
    <string name="press_on_switch">Ready to detect. You can now press on a switch</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="cancel">Cancel</string>
    <string name="field_requied">Field requiered</string>
    <string name="switch_already_exists">This switch already exists in the group</string>
    <string name="item_saved">Item saved</string>
    <string name="undo">Undo</string>
    <string name="item_deleted">Item deleted</string>
    <string name="hue">Hue</string>
    <string name="lifx">LIFX</string>
    <string name="list_lights">List Lights</string>
    <string name="philips_hue">Philips Hue</string>
    <string name="api_key">API Key</string>
    <string name="lifx_key">LIFX key</string>
    <string name="settings">Settings</string>
    <string name="fect_lifx_failed">Cannot fetch LIFX lights</string>
    <string name="light_saved">Light Saved</string>
    <string name="add_group">Add group</string>
    <string name="press_hue_bridge">Press on the button of the HUE bridge</string>
    <string name="pressed">Pressed</string>
    <string name="configure_hue">Configure HUE</string>
    <string name="hue_not_configured">Phillips Hue is not configured yet, or there is a problem with the settings</string>
    <string name="hue_phone_not_configured">The phone is not configured for Phillips Hue</string>
    <string name="hue_mirror_not_configured">The mirror is not configured for Phillips Hue</string>
    <string name="hue_all_devices_registered">All devices are configured for Phillips Hue</string>
    <string name="register_failed">Failed to register the devices</string>
    <string name="home_fragment">Home</string>
    <string name="edit_fragment">Edit Group</string>
    <string name="add_light_fragment">Add a light</string>
    <string name="netatmo">Netatmo</string>
    <string name="saturation">Saturation</string>
    <string name="brightness">Brightness</string>
    <string name="update_scene">Update scene</string>
    <plurals name="lights_plurals">
        <item quantity="zero">%d light</item>
        <item quantity="one">%d light</item>
        <item quantity="other">%d lights</item>
    </plurals>

    <plurals name="switch_already_present">
        <item quantity="one">The switch is already present in %d group</item>
        <item quantity="other">The switch is already present in %d groups</item>
    </plurals>

    <plurals name="light_not_saved">
        <item quantity="one" formatted="true">the light not save (it probably already exists)</item>
        <item quantity="other" formatted="true">%d lights not save (they probably already exist)</item>
    </plurals>
</resources>